[package]
name = "ultralight-ui"
version = "0.2.0-alpha"
edition = "2024"

[lib]
name = "ultralightui"
crate-type = ["cdylib"]

[features]
default = ["native"]
surfman = ["dep:surfman"]
gl-headless = ["dep:gl-headless"]
native = ["dep:khronos-egl", "dep:cocoa", "dep:winapi"]

[dependencies]
ul-next = { version = "0.5.4" }
arboard = "3.6.1"
gl = "0.14.0"
gl-headless = { version = "0.2.2", optional = true }
surfman = { version = "0.11.0", features = ["sm-x11"], optional = true }
parking_lot = { version = "0.12.5", features = ["nightly"] }
png = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(target_os = "linux")'.dependencies]
khronos-egl = { version = "6.0.0", features = ["static"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "wingdi",
    "winuser",
], optional = true }
